
2019-08-26  Ron Norman <rjn@inglenet.com>

	* cobc.h: Add extern cb_mf_ibm_comp
	* tree.h: Add flag_ignore_sync
	* parser.y: set flag_ignore_sync for BINARY-SHORT/LONG/DOUBLE
	* field.c: test flag_ignore_sync for BINARY-SHORT/LONG/DOUBLE
	          which are never SYNCed
	* flag.def : fix help info
	* help.c : display -fibmcomp info

2019-08-17  Simon Sobisch <simonsobisch@gnu.org>

	* typeck.c (cb_encode_program_id), parser.y, codegen.c, cobc.c: changed
	  method signature to remove unnecessary check for path separators and
	  do case folding as requested - callers use explicit COB_FOLD_UPPER for
	  functions now instead of additional folding after the call, also lead
	  to removing (user_func_upper) from codegen.c
	* typeck.c (cb_encode_program_id): check for path separators now backwards
	* typeck.c: removed duplicated code for program-id encoding
	  using libcob's new cob_encode_program_id with explicit check
	  for buffer size fixing bug #584
	* scanner.l (read_literal): fixed bug #583 buffer overflow
	* cobc.c: PROGRAM-ID verification with explicit check for empty PROGRAM-ID
	  and cut of PROGRAM-IDs that are too long in the error message
	* config.def (cb_lit_length): changed internal maximum length of a literal
	  from LONG_MAX to COB_MAX_LITERAL_LEN, a new define with currently 256k
	* cobc.c (cobc_deciph_optarg): explicit check for integer overflow and
	  return INT_MAX in this case

2019-08-14  Simon Sobisch <simonsobisch@gnu.org>

	* field.c (cb_evaluate_expr): return error_node on expression overflow
	* field.c (validate_elementary_item): don't re-set f->flag_synchronized
	  depending on cb_mf_ibm_comp as the flag is not set because of the ignored
	  synchronized clause
	* cobc.h, config.def: moved defines all CB_CONFIG_ANY entries to to new
	  enums: cb_binary_size_options, cb_binary_byteorder_options,
	  cb_assign_clause_options; used these instead of unsigned int
	* field.c (compute_binary_size): switch over cb_binary_size