@@ -1,4 +1,9 @@
 
+2019-08-27  Simon Sobisch <simonsobisch@gnu.org>
+
+	* cobc.c (process_command_line), flag.def: removed duplicated flag handling
+	  by removing cb_flag_arithmetic_osvs and cb_flag_move_ibm
+
 2019-08-26  Ron Norman <rjn@inglenet.com>
 
 	* cobc.h: Add extern cb_mf_ibm_comp
